feat: Make `Bits::push_number_checked` public

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.16.1\...HEAD[Unreleased]
+
+=== Changed
+
+* Make `Bits::push_number_checked` public ({pull-request-url}/34[#34])
+
 == {compare-url}/v0.16.0\...v0.16.1[0.16.1] - 2025-10-20
 
 === Added
