--- a/AUTHORS.adoc
+++ b/AUTHORS.adoc
@@ -27,6 +27,7 @@
 * Kyle Clemens
 * https://github.com/flosse[Markus Kohlhase]
 * https://github.com/mspiegel[Michael Spiegel]
+* https://github.com/RCasatta[Riccardo Casatta]
 * https://github.com/Stebalien[Steven Allen]
 * https://github.com/svenstaro[Sven-Hendrik Haase]
 * https://github.com/cab404[Vladimir Serov]
