chore: Update copyright notice

--- a/AUTHORS.adoc
+++ b/AUTHORS.adoc
@@ -30,3 +30,7 @@
 * https://github.com/Stebalien[Steven Allen]
 * https://github.com/svenstaro[Sven-Hendrik Haase]
 * https://github.com/cab404[Vladimir Serov]
+
+== Acknowledgment
+
+* https://github.com/Nakanishi123[Nakanishi]
