--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -14,7 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
-== {compare-url}/v0.14.1\...v0.15.1[0.15.0] - 2025-10-18
+== {compare-url}/v0.15.0\...HEAD[Unreleased]
+
+=== Changed
+
+* Remove trailing LF from output PIC images ({pull-request-url}/21[#21])
+
+== {compare-url}/v0.14.1\...v0.15.0[0.15.0] - 2025-10-18
 
 === Added
 
