--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -14,7 +14,7 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
-== {compare-url}/v0.15.0\...HEAD[Unreleased]
+== {compare-url}/v0.15.0\...v0.16.0[0.16.0] - 2025-10-19
 
 === Added
 
