--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -14,7 +14,7 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
-== {compare-url}/v0.16.1\...HEAD[Unreleased]
+== {compare-url}/v0.16.1\...v0.17.0[0.17.0] - 2025-11-01
 
 === Added
 
